Nombres modificados y boletas agregadas

--- a/RFIDDdatabase-Local/templates/stock.html
+++ b/RFIDDdatabase-Local/templates/stock.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>MiniMarket Tabla</title>
+    <title>MiniMarket Stock</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
@@ -16,9 +16,12 @@
 <body class="dx-viewport">
     <div class="demo-container">
         <div id="gridContainer"></div>
+        <button  onclick="getdata()">Update</button>
     </div>
 
-    <script src="static/js/data.js"></script>
-    <script src="static/js/staticTable.js"></script>
+
+    <script src="static/js/data-stock.js"></script>
+    <script src="static/js/stock.js"></script>
+
 </body>
 </html>
