--- a/RFIDDdatabase/templates/menuAdmin.html
+++ b/RFIDDdatabase/templates/menuAdmin.html
@@ -19,7 +19,7 @@
     <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css"> <!-- cambio -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
@@ -27,39 +27,29 @@
 </head>
 
   <body id="page-top">
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="http://camilaferno.pythonanywhere.com/">HOME</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          MENU
-          <i class="fa fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="{{url_for('login')}}">INGRESA</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
     <!-- Intro Header -->
     <header class="masthead">
         <div class="intro-body">
-        <div class="container">
+
           <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <h1 class="brand-heading">Mini-Market</h1>
-              <p class="intro-text">Vende más fácil.</p>
+            <div class="column">
+                <a href="{{url_for('receipts')}}"> <!-- /boleta_admin.html -->
+                <img src="../static/img/CashierIcon.png"  style="width:40%">
+                <h2>Boletas</h2>
+                </a>
             </div>
+
+            <div class="column">
+              <a href="{{url_for('stock_admin')}}"> <!-- /inventario_admin.html -->
+              <img src="../static/img/InventarioIcon.png" style="width:40%">
+              <h2>Inventario</h2>
+              </a>
+            </div>
+
           </div>
+
         </div>
-      </div>
     </header>
   </body>
 
 </html>
-
