--- a/RFIDDdatabase/templates/boleta_cajero.html
+++ b/RFIDDdatabase/templates/boleta_cajero.html
@@ -26,7 +26,7 @@ button {
 
 </style>
 <head>
-    <title>Carrito</title>
+    <title>Boleta</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
@@ -47,7 +47,7 @@ button {
 
     <!-- Files anexados-->
     <script type="text/javascript" src="{{ url_for('static', filename='js/boleta_cajero.js') }}"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/carrito.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/boleta_cajero.css') }}"/>
 
 </head>
 <body class="dx-viewport">
