--- a/RFIDDdatabase/templates/menuAdmin.html
+++ b/RFIDDdatabase/templates/menuAdmin.html
@@ -35,7 +35,7 @@
             <div class="column">
                 <a href="{{url_for('receipts')}}"> <!-- /boleta_admin.html -->
                 <img src="../static/img/CashierIcon.png"  style="width:40%">
-                <h2>Boletas</h2>
+                <h2>Registro boletas</h2>
                 </a>
             </div>
 
