--- a/RFIDDdatabase/templates/menuCashier.html
+++ b/RFIDDdatabase/templates/menuCashier.html
@@ -35,7 +35,7 @@
             <div class="column">
                 <a href="shopping_cart"> <!-- /boleta_cajero.html -->
                 <img src="../static/img/CashierIcon.png"  style="width:40%">
-                <h2>Boletas</h2>
+                <h2>Boleta</h2>
                 </a>
             </div>
 
