--- a/RFIDDdatabase/templates/boleta_cajero.html
+++ b/RFIDDdatabase/templates/boleta_cajero.html
@@ -56,7 +56,7 @@ button {
     </div>
     <div class="container space-between">
       <div class="first">Numero de Boleta: </div>
-      <div class="second"><p id="numboleta">hola</p></div>
+      <div class="second"><p id="numboleta"></p></div>
     </div>
     <div id="boton">
 	     <button onclick="endReceipt()" type="button">End Receipt</button>
